--- a/documentation.html
+++ b/documentation.html
@@ -500,7 +500,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_other">10.2. Other</a></li>
 </ul>
 </li>
-<li><a href="#_release_notes">11. Release Notes</a></li>
+<li><a href="#_release_notes">11. Release Notes</a>
+<ul class="sectlevel2">
+<li><a href="#_styx_0_1_0_2016_10_7">11.1. Styx 0.1.0 - 2016/10/7</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -2708,7 +2712,12 @@ This means that two successive <code>styx deploy --gh-pages</code> will create c
 <div class="sect1">
 <h2 id="_release_notes"><a class="anchor" href="#_release_notes"></a>11. Release Notes</h2>
 <div class="sectionbody">
-
+<div class="sect2">
+<h3 id="_styx_0_1_0_2016_10_7"><a class="anchor" href="#_styx_0_1_0_2016_10_7"></a>11.1. Styx 0.1.0 - 2016/10/7</h3>
+<div class="paragraph">
+<p>Initial release of Styx.</p>
+</div>
+</div>
 </div>
 </div>
 </div>
