--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <p>styx new myblog</p>
   <p>cd myblog && styx serve</p>
 </div>
-<p class="text-center">Then have a look to the <a href="/documentation.html">documentation</a> to learn how to customize your site.</p>
+<p class="text-center">Then have a look to the <a href="https://styx-static.github.io/styx-site/documentation.html">documentation</a> to learn how to customize your site.</p>
 </div>
 
 
