--- a/themes/hyde.html
+++ b/themes/hyde.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,6 +8,7 @@
 <link href="https://styx-static.github.io/styx-site/feed.xml" rel="alternate" type="application/atom+xml" />
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/github.min.css" rel="stylesheet" type="text/css" />
 <link href="https://styx-static.github.io/styx-site/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -37,7 +38,7 @@
 <h1 class="text-capitalize">Hyde</h1>
 
 <div class="description"><div class="paragraph">
-<p>Port of the <a href="https://github.com/poole/hyde">Hyde</a> theme.<br>
+<p>Port of the <a href="https://github.com/poole/hyde">Hyde</a> theme.<br/>
 Requires the <code>generic-templates</code> theme.</p>
 </div>
 </div>
@@ -47,46 +48,48 @@ Requires the <code>generic-templates</code> theme.</p>
 <p class="license">License: <a href="http://spdx.org/licenses/MIT">MIT License</a></p>
 
 <p class="links">
-  <a href="https://styx-static.github.io/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
-  <a href="https://github.com/styx-static/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
+    <a href="https://styx-static.github.io/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a> 
+    <a href="https://github.com/styx-static/styx-theme-generic-hyde" class="btn btn-info"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
   </p>
 
 <img class="img-responsive center-block" src="https://styx-static.github.io/styx-site/imgs/themes/hyde.png" />
 
-<div class="conf"><div class="panel panel-primary">
-  <div class="panel-heading">Configuration interface</div>
-  
-  <div class="list-group-item">
+<div class="theme-conf"><div class="panel panel-default">
+<div class="panel-heading">Configuration interface</div>
+<ul class="list-group">
+<li class="list-group-item">
   <p><strong>colorScheme</strong></p>
-  <dl class="dl-horizontal"><dt>Description:</dt><dd><div class="paragraph">
+  <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Selects the color scheme. Set to <code>null</code> for default black scheme.</p>
 </div>
-</dd><dt>Type:</dt><dd>null or one of "08", "09", "0a", "0b", "0c", "0d", "0e", "0f"</dd></dl>
-</div>
-<div class="list-group-item">
-  <p><strong>description</strong></p>
-  <dl class="dl-horizontal"><dt>Description:</dt><dd><div class="paragraph">
-<p>Content of the description <code>meta</code> tag.</p>
-</div>
-</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><code>"An elegant open source and mobile first theme for styx made by <a href=\"http://twitter.com/mdo\">@mdo</a>. Originally made for Jekyll.\n"</code></dd></dl>
-</div>
-<div class="list-group-item">
+</dd><dt>Type:</dt><dd>null or one of "08", "09", "0a", "0b", "0c", "0d", "0e", "0f"</dd><dt>Default:</dt><dd><pre><code>null</code></pre></dd></dl>
+</li><li class="list-group-item">
   <p><strong>itemsPerPage</strong></p>
-  <dl class="dl-horizontal"><dt>Description:</dt><dd><div class="paragraph">
+  <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Number of posts per page.</p>
 </div>
-</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><code>3</code></dd></dl>
-</div>
-<div class="list-group-item">
+</dd><dt>Type:</dt><dd>integer</dd><dt>Default:</dt><dd><pre><code>3</code></pre></dd></dl>
+</li><li class="list-group-item">
   <p><strong>layout.reverse</strong></p>
-  <dl class="dl-horizontal"><dt>Description:</dt><dd><div class="paragraph">
+  <dl><dt>Description:</dt><dd><div class="paragraph">
 <p>Whether to enable reverse layout.</p>
 </div>
-</dd><dt>Type:</dt><dd>boolean</dd><dt>Default:</dt><dd><code>false</code></dd><dt>Example:</dt><dd><code>true</code></dd></dl>
+</dd><dt>Type:</dt><dd>boolean</dd><dt>Default:</dt><dd><pre><code>false</code></pre></dd><dt>Example:</dt><dd><pre><code>true</code></pre></dd></dl>
+</li><li class="list-group-item">
+  <p><strong>site.description</strong></p>
+  <dl><dt>Description:</dt><dd><div class="paragraph">
+<p>Site description.</p>
 </div>
-  
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;An elegant open source and mobile first theme for styx made by &lt;a href=\&quot;http://twitter.com/mdo\&quot;&gt;@mdo&lt;/a&gt;. Originally made for Jekyll.
+&quot;</code></pre></dd></dl>
+</li><li class="list-group-item">
+  <p><strong>site.title</strong></p>
+  <dl><dt>Description:</dt><dd><div class="paragraph">
+<p>Site title.</p>
+</div>
+</dd><dt>Type:</dt><dd>string</dd><dt>Default:</dt><dd><pre><code>&quot;Hyde&quot;</code></pre></dd></dl>
+</li></ul>
 </div></div>
-
 </div>
 
 <div class="navbar navbar-fixed-bottom" id="footer">
@@ -97,5 +100,17 @@ Requires the <code>generic-templates</code> theme.</p>
   </div>
 </div>
 <script crossorigin="anonymous" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+<script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/nix.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-90618087-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
